# ozzb2b

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api_receiver.php  compose.dev.yml  compose.prod.yml  functions.php  sampletagBeta.txt  telegram_bot.php  test_email.php
.github/: dependabot.yml
.github/workflows/: ci.yml  compose-smoke.yml  nightly.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/src/ozzb2b_api/: __init__.py  app.py  config.py  errors.py  logging.py  main.py
apps/api/src/ozzb2b_api/clients/: __init__.py  cache.py  clickhouse.py  events.py  matcher.py  meilisearch.py  redis.py  scraper_jobs.py
apps/api/src/ozzb2b_api/db/: __init__.py  base.py  cli.py  seed.py  session.py
apps/api/src/ozzb2b_api/db/migrations/: env.py
apps/api/src/ozzb2b_api/db/migrations/versions/: 20260422_0001_baseline.py  20260422_0002_enum_values.py  20260423_0003_chat_tables.py  20260423_0004_provider_claims.py
apps/api/src/ozzb2b_api/db/models/: __init__.py  _mixins.py  category.py  chat.py  geo.py  legal_form.py  provider.py  provider_claim.py  user.py
apps/api/src/ozzb2b_api/grpc_gen/: __init__.py
apps/api/src/ozzb2b_api/grpc_gen/ozzb2b/matcher/v1/: matcher_pb2.py  matcher_pb2_grpc.py
apps/api/src/ozzb2b_api/observability/: __init__.py  metrics.py  security_headers.py
apps/api/src/ozzb2b_api/routes/: admin.py  auth.py  catalog.py  chat.py  claims.py  deps.py  health.py  search.py
apps/api/src/ozzb2b_api/schemas/: auth.py  catalog.py  chat.py  claims.py
apps/api/src/ozzb2b_api/security/: __init__.py  passwords.py  rate_limit.py  safe_http.py  tokens.py
apps/api/src/ozzb2b_api/services/: __init__.py  analytics.py  auth.py  catalog.py  chat.py  claims.py  indexer.py  provider_mapping.py  search.py
apps/api/tests/: conftest.py  test_admin_endpoints.py  test_auth_endpoints.py  test_auth_service.py  test_catalog_service.py  test_chat_service.py  test_chat_tokens.py  test_claims_service.py  test_compose_contract.py  test_domain_errors.py  test_event_emitter.py  test_health.py  test_indexer_doc.py  test_jwt_hardening.py  test_meili_filter_escape.py  test_models_portable.py  test_observability_config.py  test_openapi_schema.py  test_passwords.py  test_property_tokens.py  test_provider_mapping.py  test_public_endpoints.py  test_rate_limit.py  test_rate_limit_faults.py  test_rbac_matrix.py  test_reference_cache.py  test_safe_http.py  test_scraper_jobs_client.py  test_search_endpoint.py  test_search_rerank.py  test_search_service.py  test_security.py  test_security_and_metrics.py  test_tokens.py  test_xff_trust.py
apps/api/tests/integration/: conftest.py  test_alembic_round_trip.py  test_postgres_smoke.py  test_redis_rate_limit.py
apps/api/tests/snapshots/: openapi_routes.json
apps/chat/: Dockerfile  go.mod  go.sum  main.go  main_test.go
apps/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/e2e/tests/: smoke.spec.ts
apps/events/: Dockerfile  go.mod  go.sum  main.go  main_test.go
apps/matcher/: Cargo.toml  Dockerfile  build.rs
apps/matcher/src/: lib.rs  main.rs  metrics.rs  scoring.rs  service.rs
apps/scraper/: Dockerfile  pyproject.toml
apps/scraper/src/ozzb2b_scraper/: __init__.py  cli.py  config.py  http.py  models.py  pipeline.py  robots.py  tasks.py
apps/scraper/src/ozzb2b_scraper/extractors/: __init__.py  html_public.py
apps/scraper/src/ozzb2b_scraper/spiders/: __init__.py  base.py  demo_directory.py  ru_business_services_seed.py  ru_fns_sme_registry.py  ru_outsourcing_seed.py  ru_regional_it_seed.py
apps/scraper/tests/: test_challenge_and_host.py  test_extractors.py  test_robots.py  test_ru_business_services_seed.py  test_ru_fns_sme_registry.py  test_ru_outsourcing_seed.py  test_ru_regional_it_seed.py  test_spiders.py  test_task_wrappers.py  test_tasks.py  test_tasks_schedule.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
deploy/: migrate_to_nginx.sh  move_wp_to_legacy.ps1  remote_git_clone.sh  smoke.sh  vps_apply_stack.sh  vps_bootstrap.sh  vps_check_analytics.py  vps_check_events_settings.py  vps_ci_phase5.sh  vps_diag_db.sh  vps_diag_events.sh  vps_grafana_ssl.sh  vps_migrate.sh  vps_ozzb2b_ssl.sh  vps_phase0_setup.sh  vps_phase55_bootstrap.sh  vps_postgres_allow_docker.sh  vps_providers_count.sh  vps_redis_allow_docker.sh  vps_rust_ci.sh  vps_set_telegram.sh  vps_smoke_chat.py  vps_smoke_events.py  vps_smoke_matcher.py  vps_smoke_phase5.sh  vps_smoke_phase55.sh  vps_smoke_phase56.sh  vps_smoke_phase6.sh  vps_smoke_phase7.sh  vps_smoke_phase8.sh  vps_smoke_ru_api.sh  vps_status_check.sh  vps_verify_ru.sh  vps_verify_ru_web.py
docs/: AGENT_HANDOFF.md
infra/alertmanager/: alertmanager.noop.yml  alertmanager.yml.tmpl
infra/apache/: api.ozzb2b.com.conf  grafana.ozzb2b.com.conf  ozzb2b.com.conf
infra/clickhouse/: disable_system_logs.xml  low_memory_prod.xml
infra/grafana/dashboards/: ozzb2b-host.json  ozzb2b-overview.json
infra/loki/: loki-config.yaml
infra/nginx/: api.ozzb2b.com.conf  grafana.ozzb2b.com.conf  ozzb2b.com.conf
infra/process-exporter/: config.yml
infra/prometheus/: prometheus.yml
infra/prometheus/rules/: ozzb2b.rules.yml
infra/promtail/: promtail-config.yaml
legacy/: composer.json  email_sender.php  masstagtestlist.txt  test.csv
scripts/: check_go_coverage.sh  check_web_ru_only.sh  gen_grpc_py.py
wp-content/plugins/: tarot-game.rar
wp-content/plugins/bulk-post-tagger/: bulk-post-tagger.php
wp-content/plugins/dhl-for-woocommerce/: readme.txt
wp-content/plugins/payed-posts/: index.php  on_activation.php
wp-content/plugins/simple-fitness/: additional_fields.php  custom_taxonomies.php
wp-content/plugins/tarot-game/: readme.txt  tarot-options.php
wp-content/plugins/tarot-game-test/: tarot.style.css
wp-content/plugins/wc-telegram-bot/: wc-telegram-bot.php
wp-content/plugins/woodurcoin-main/: README.md  composer.json  (+2 more)
(+239 files in other folders)
