[project]
name = "ozzb2b-api"
version = "0.1.0"
description = "ozzb2b B2B marketplace API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "httpx>=0.27,<0.28",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2",
    "argon2-cffi>=23.1,<24",
    "pyjwt[crypto]>=2.9,<3",
    "email-validator>=2.2,<3",
    "redis>=5.2,<6",
    "meilisearch>=0.32,<0.33",
    "python-slugify>=8.0,<9",
    "celery[redis]>=5.4,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5,<6",
    "anyio>=4.4,<5",
    "aiosqlite>=0.20,<0.21",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "types-python-slugify>=8,<9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ozzb2b_api.db.migrations" = ["*.mako", "versions/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "S", "N", "RUF"]
# N811: `PgUUID` alias for `sqlalchemy.dialects.postgresql.UUID` is an idiomatic
# SQLAlchemy pattern used to avoid clashing with `uuid.UUID`; not worth renaming.
ignore = ["S101", "S105", "S106", "N811"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]
# Seed file intentionally contains Russian/Ukrainian strings (RUF001) and long
# description literals (E501) that we don't want to reflow.
"src/ozzb2b_api/db/seed.py" = ["E501", "RUF001"]
# Alembic baseline migrations mirror SQL column definitions and are read
# top-to-bottom; wrapping them hurts readability more than it helps.
"src/ozzb2b_api/db/migrations/versions/*.py" = ["E501"]
# Keep string forward-refs in ORM relationship() and Pydantic recursive models:
# they're needed by SQLAlchemy / Pydantic for runtime resolution and by
# TYPE_CHECKING-guarded imports used to break circular dependencies.
"src/ozzb2b_api/db/models/*.py" = ["UP037"]
"src/ozzb2b_api/schemas/*.py" = ["UP037"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["meilisearch", "meilisearch.*", "argon2", "argon2.*", "slugify", "slugify.*"]
ignore_missing_imports = true
