[project]
name = "ozzb2b-api"
version = "0.1.0"
description = "ozzb2b B2B marketplace API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "httpx>=0.27,<0.28",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2",
    "argon2-cffi>=23.1,<24",
    "pyjwt[crypto]>=2.9,<3",
    "email-validator>=2.2,<3",
    "redis>=5.2,<6",
    "meilisearch>=0.32,<0.33",
    "python-slugify>=8.0,<9",
    "celery[redis]>=5.4,<6",
    "grpcio>=1.67,<2",
    "protobuf>=5.28,<7",
    "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5,<6",
    "anyio>=4.4,<5",
    "aiosqlite>=0.20,<0.21",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "types-python-slugify>=8,<9",
    "grpcio-tools>=1.67,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ozzb2b_api.db.migrations" = ["*.mako", "versions/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --cov=src/ozzb2b_api --cov-report=term-missing --cov-report=xml --cov-fail-under=60"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/ozzb2b_api"]
omit = [
    "src/ozzb2b_api/grpc_gen/*",
    "src/ozzb2b_api/db/migrations/*",
    "src/ozzb2b_api/db/seed.py",
    "src/ozzb2b_api/main.py",
    "src/ozzb2b_api/db/cli.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Auto-generated protobuf/gRPC stubs are never edited by hand.
extend-exclude = ["src/ozzb2b_api/grpc_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "S", "N", "RUF"]
# N811: `PgUUID` alias for `sqlalchemy.dialects.postgresql.UUID` is an idiomatic
# SQLAlchemy pattern used to avoid clashing with `uuid.UUID`; not worth renaming.
ignore = ["S101", "S105", "S106", "N811"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]
# Seed file intentionally contains Russian/Ukrainian strings (RUF001) and long
# description literals (E501) that we don't want to reflow.
"src/ozzb2b_api/db/seed.py" = ["E501", "RUF001"]
# Alembic baseline migrations mirror SQL column definitions and are read
# top-to-bottom; wrapping them hurts readability more than it helps.
"src/ozzb2b_api/db/migrations/versions/*.py" = ["E501"]
# Keep string forward-refs in ORM relationship() and Pydantic recursive models:
# they're needed by SQLAlchemy / Pydantic for runtime resolution and by
# TYPE_CHECKING-guarded imports used to break circular dependencies.
"src/ozzb2b_api/db/models/*.py" = ["UP037"]
"src/ozzb2b_api/schemas/*.py" = ["UP037"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["meilisearch", "meilisearch.*", "argon2", "argon2.*", "slugify", "slugify.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*"]
ignore_missing_imports = true

# Generated code: no stubs, heavy dynamic attribute use. Treat as untyped so
# call sites don't fight attr-defined / no-untyped-call on every rebuild.
[[tool.mypy.overrides]]
module = ["ozzb2b_api.grpc_gen", "ozzb2b_api.grpc_gen.*"]
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"
