[package]
name = "ozzb2b-matcher"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "ozzb2b search/matching service"

[[bin]]
name = "ozzb2b-matcher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
    "io-util",
] }
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
tonic = { version = "0.13", default-features = false, features = [
    "transport",
    "router",
    "codegen",
    "prost",
] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", default-features = false }

[build-dependencies]
tonic-build = { version = "0.13", default-features = false, features = ["prost"] }

[dev-dependencies]
tokio = { version = "1.41", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "test-util",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
