[project]
name = "ozzb2b-scraper"
version = "0.1.0"
description = "ozzb2b scraping worker"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<0.28",
    "selectolax>=0.3.26,<0.4",
    "celery[redis]>=5.4,<6",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "python-slugify>=8.0,<9",
    "tenacity>=9,<10",
    # Security pins for transitive deps (same rationale as apps/api).
    "h11>=0.16,<0.17",
    "httpcore>=1.0.9,<2",
    "urllib3>=2.6,<3",
    "requests>=2.33.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5,<6",
    "ruff>=0.7,<0.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --cov=src/ozzb2b_scraper --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/ozzb2b_scraper"]
omit = [
    "src/ozzb2b_scraper/cli.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
